--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -12,6 +8,6 @@
   </head>
   <body>
     <a href="/">Home</a> &hearts; <a href="/about">About</a> &hearts; <a href="/blog">Blog</a>
-    <h1>My First Astro Site</h1>
+    <h1>Blog Page</h1>
   </body>
 </html>
