--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,3 +1,9 @@
+---
+
+  import "../styles/styles.css";
+
+---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -9,5 +15,11 @@
   <body>
     <a href="/">Home</a> &hearts; <a href="/about">About</a> &hearts; <a href="/blog">Blog</a>
     <h1>Blog Page</h1>
+    <p>This is where I will post about my journey learning Astro.</p>
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
   </body>
 </html>
