--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+  import "../styles/styles.css"
+  const pageTitle = "Home Page"
 ---
 
 <html lang="en">
@@ -8,10 +9,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
     <a href="/">Home</a> &hearts; <a href="/about">About</a> &hearts; <a href="/blog">Blog</a>
-    <h1>My First Astro Site</h1>
+    <h1>{pageTitle}</h1>
   </body>
 </html>
